--- a/src/app/pages/cart/cart.scss
+++ b/src/app/pages/cart/cart.scss
@@ -281,6 +281,7 @@
         align-items: center;
         justify-content: center;
         height: 100%;
+        margin-bottom: 16px;
     }
 }
 .price-detail{
